--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@babel/preset-env": "^7.3.1",
     "@babel/preset-react": "^7.9.4",
     "babel-loader": "^8.0.5",
+    "copy-webpack-plugin": "^6.0.1",
     "css-loader": "^3.5.3",
     "html-webpack-plugin": "^4.3.0",
     "style-loader": "^1.2.1",
